--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
-  "devDependencies": {
-    "vitepress": "^1.3.1"
-  },
+  "name": "IronRookieCoder-blog",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "dev": "vitepress --open",
+    "build": "vitepress build",
+    "serve": "vitepress serve"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/markdown-it": "^12.2.3",
+    "@types/node": "^20.11.27",
+    "feed": "^4.2.2",
+    "gray-matter": "^4.0.3",
+    "tailwindcss": "^3.4.1",
+    "vitepress": "^1.0.0",
+    "vue": "^3.4.21"
+  },
+  "pnpm": {
+    "overrides": {
+      "@vitejs/plugin-vue": "5.0.0-beta.1"
+    }
   }
 }
